feat: UserMedia에 thumbnailKey 저장 자리 마련
nullable 컬럼 + 4-인자 팩토리(기존 3-인자는 위임 유지). 응답에
thumbnailUrl 추가 — key 있을 때만 서명, null이면 필드째 생략된다.
삭제 시 원본과 썸네일을 함께 예약하되 옛 행의 null은 List.of 대신
Arrays.asList로 실어 S3Deleter 필터가 거르게 한다. 값을 채우는 쪽
(합성 파이프라인)은 후속 단계.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>